--- a/assets/package.json
+++ b/assets/package.json
@@ -33,8 +33,8 @@
     "autoprefixer": "10.2.5",
     "babel-loader": "8.2.2",
     "browser-sync": "2.26.14",
-    "browserslist": "4.16.3",
     "cross-env": "7.0.3",
+    "cssnano": "^4.1.11",
     "del": "6.0.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
