--- a/assets/package.json
+++ b/assets/package.json
@@ -67,8 +67,7 @@
     "webpack": "5.27.2"
   },
   "engines": {
-    "node": ">=12.0.0 <15",
-    "npm": "^7.0.0"
+    "node": ">=12.0.0 <15"
   },
   "scripts": {
     "postinstall": "npx gulp load-env",
