--- a/assets/.stylelintrc.json
+++ b/assets/.stylelintrc.json
@@ -8,6 +8,7 @@
     }
   ],
   "rules": {
+    "no-descending-specificity": null,
     "no-empty-source": null,
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
