--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gulp-sass": "4.1.0",
     "gulp-stylelint": "13.0.0",
     "htmlhint-stylish": "1.0.3",
-    "husky": "4.3.8",
+    "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "node-notifier": "9.0.1",
     "postcss": "8.2.14",
@@ -75,7 +75,8 @@
     "lint-styles": "npx gulp lint-styles",
     "lint-js": "npx gulp lint-js",
     "fix-js": "npx prettier js/**/*.js --write && npx eslint js/**/*.js --fix",
-    "fix-styles": "npx prettier scss/**/*.scss --write && npx stylelint scss/**/*.scss --fix --cache"
+    "fix-styles": "npx prettier scss/**/*.scss --write && npx stylelint scss/**/*.scss --fix --cache",
+    "prepare": "husky install"
   },
   "dependencies": {
     "normalize.css": "8.0.1"
